fix: remove more java 21 syntax